--- a/server/config-local.json
+++ b/server/config-local.json
@@ -2,5 +2,6 @@
     "testMode": true,
     "port": 5001,
     "dbDirectory": "../db-data",
-    "dataDirectory": "../data"
+    "dataDirectory": "../data",
+    "voteWebhook": "vote-fsd8vxcv86vn87s88"
 }
