Configured the 'now' routing. This is so that sub paths still get routed to the index.html file, which is common for SPAs (in particular Elm). I'm also routing /appapi requests to the api server, at least I hope I am, that is not yet deployed so I haven't tested that it works, but it gets a badgateway in any case.

--- a/now.json
+++ b/now.json
@@ -1,3 +1,17 @@
 {
-    "version": 2
+    "version": 2,
+    "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
+        {
+            "src": "/appapi/(.*)",
+            "dest": "http://51.15.70.20/appapi/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
+    ]
 }
