--- a/server/config-production.json
+++ b/server/config-production.json
@@ -1,10 +1,13 @@
 {
     "testMode": false,
+    "logVotes": false,
     "port": 80,
     "dbDirectory": "../db-data",
     "dataDirectory": "../data",
-    "voteWebhook": "vote-fsd8vxcv86vn87s88",
+    "voteWebhook": "vote-dfg7dfg75nfngy33dfjkjg",
     "voteToBlockchain": true,
     "blockchainHost": "http://134.209.92.132:5005",
-    "kGraphAPIKey": "AIzaSyCgELftillDzM15I2dBhVhuro7fLMBJU6A"
+    "kGraphAPIKey": "AIzaSyCgELftillDzM15I2dBhVhuro7fLMBJU6A",
+    "smsGatewayUsername": "username",
+    "smsGatewayPassword": "password"
 }
