changes to prod config

--- a/server/config-production.json
+++ b/server/config-production.json
@@ -8,6 +8,6 @@
     "voteToBlockchain": true,
     "blockchainHost": "http://134.209.92.132:5005",
     "kGraphAPIKey": "AIzaSyCgELftillDzM15I2dBhVhuro7fLMBJU6A",
-    "smsGatewayUsername": "username",
-    "smsGatewayPassword": "password"
+    "smsGatewayUsername": "45fghw5yhfrtyrthghghrhk07",
+    "smsGatewayPassword": "0ghdfge5tdfbthffghfgh44566g"
 }
